<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2024 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.duckduckgo.app.generalsettings.GeneralSettingsActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/include_default_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="Overdraw">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/keyline_5">

            <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
                android:id="@+id/privateSearchHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_4"
                app:primaryText="@string/privateSearchActivityTitle" />

            <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
                android:id="@+id/autocompleteToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/privateSearchAutocompleteToggle"
                app:secondaryText="@string/privateSearchAutocompleteHint"
                app:showSwitch="true" />

            <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
                android:id="@+id/autocompleteRecentlyVisitedSitesToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/privateSearchAutocompleteRecentlyVisitedSitesToggle"
                app:secondaryText="@string/privateSearchAutocompleteRecentlyVisitedSitesHint"
                app:showSwitch="true" />

            <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
                android:id="@+id/voiceSearchToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:primaryText="@string/accessibilityVoiceSearchTitle"
                app:secondaryText="@string/accessibilityVoiceSearchSubtitle"
                app:showSwitch="true" />

            <com.duckduckgo.common.ui.view.divider.HorizontalDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
                android:id="@+id/showOnAppLaunchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:primaryText="@string/showOnAppLaunchOptionTitle"
                tools:secondaryText="Last Opened Tab" />

            <com.duckduckgo.common.ui.view.divider.HorizontalDivider
                android:id="@+id/maliciousSiteDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
                android:id="@+id/maliciousSiteHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_4"
                app:primaryText="@string/scamBlockerTitle" />

            <com.duckduckgo.common.ui.view.listitem.OneLineListItem
                android:id="@+id/maliciousToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                app:primaryText="@string/scamBlockerDescription"
                app:primaryTextTruncated="false"
                app:showSwitch="true" />

            <com.duckduckgo.common.ui.view.text.DaxTextView
                android:id="@+id/maliciousLearnMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:text="@string/maliciousSiteSettingLearnMore"
                app:typography="body2" />

            <com.duckduckgo.common.ui.view.text.DaxTextView
                android:id="@+id/maliciousDisabledMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_4"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:text="@string/maliciousSiteSettingDisabled"
                android:visibility="visible"
                android:textColor="?daxColorDestructive"
                app:typography="body2" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
