<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsSectionGeneral"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:id="@+id/settingsSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingMainSettings" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/generalSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsGeneral"
        app:leadingIcon="@drawable/ic_settings_color_24" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/syncSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsSyncSetting"
        app:leadingIcon="@drawable/ic_sync_color_24"/>

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/appearanceSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingAppearance"
        app:leadingIcon="@drawable/ic_appearance_color_24"/>

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/autofillLoginsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsPasswordsAndAutofillLoginsSetting"
        app:leadingIcon="@drawable/ic_key_color_24"/>

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/accessibilitySetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsAccessibility"
        app:leadingIcon="@drawable/ic_accessibility_color_24"/>

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/permissionsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsPermissionsSetting"
        app:leadingIcon="@drawable/ic_lock_color_24"/>

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/fireButtonSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsDataClearing"
        app:leadingIcon="@drawable/ic_fire_color_24"/>

    <include
        android:id="@+id/includeDuckChatSetting"
        layout="@layout/view_settings_item_duck_chat" />

    <LinearLayout
        android:id="@+id/settingsSectionDuckPlayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>