<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/layoutType"
        android:icon="@drawable/ic_list_view_24"
        android:title="@string/tabSwitcherListViewMenu"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/fire"
        android:icon="@drawable/ic_fire"
        android:title="@string/fireMenu"
        app:showAsAction="always" />

    <item
        android:id="@+id/newTab"
        android:title="@string/newTabMenuItem"
        app:showAsAction="never" />

    <group android:id="@+id/selectionGroup">
        <item
            android:id="@+id/shareSelectedLinks"
            android:title=""
            app:showAsAction="never" />
        <item
            android:id="@+id/bookmarkSelectedTabs"
            android:title=""
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/bookmarkAllTabs"
        android:title="@string/bookmarkAllTabsMenuItem"
        app:showAsAction="never" />

    <group android:id="@+id/selectTabsGroup">
        <item
            android:id="@+id/selectTabs"
            android:title="@string/selectTabsMenuItem"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/closeAllTabs"
        android:title="@string/closeAllTabsMenuItem"
        app:showAsAction="never" />

</menu>
