<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsSectionAppearance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settingsAppearanceTitle"
        style="@style/SettingsSectionTitle"
        android:text="@string/settingsHeadingAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.duckduckgo.app.settings.SettingsOptionWithSubtitle
        android:id="@+id/selectedThemeSetting"
        style="@style/SettingsItemClickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:subtitle="@string/settingsSystemTheme"
        app:title="@string/settingsTheme" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/changeAppIconLabel"
            style="@style/SettingsItemClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/changeIconCtaLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/changeAppIcon"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/changeAppIconLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/changeAppIconLabel"
            tools:srcCompat="@drawable/ic_app_icon_red_round" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.duckduckgo.app.settings.SettingsOptionWithSubtitle
        android:id="@+id/selectedFireAnimationSetting"
        style="@style/SettingsItemClickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:subtitle="@string/settingsHeroFireAnimation"
        app:title="@string/settingsFireAnimation" />

    <TextView
        android:id="@+id/accessibilitySetting"
        style="@style/SettingsItemClickable"
        android:text="@string/settingsAccessibility" />

</LinearLayout>