<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2024 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsSectionOther"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:id="@+id/settingsOtherDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:id="@+id/settingsNextStepsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingNextSteps" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/addWidgetToHomeScreenSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_add_widget_color_24"
        app:primaryText="@string/settingsAddWidget" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/addressBarPositionSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_address_bar_bottom_color_24"
        app:primaryText="@string/settingsAddressBarPosition" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/enableVoiceSearchSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:leadingIcon="@drawable/ic_microphone_color_24"
        app:primaryText="@string/settingsEnableVoiceSearch"
        tools:visibility="visible" />

</LinearLayout>
